--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/1.troubleshooting-overview.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/1.troubleshooting-overview.md
@@ -22,7 +22,7 @@ OceanBase 数据库在日常生产中遇到的问题有如下几种：
 
 * [副本迁移](8.troubleshoot-replica-migration.md)
 
-* [租户 MEMStore 内存满](9.tenant-MEMStore-memory-full-troubleshooting.md)
+* [租户 MemStore 内存满](9.tenant-MEMStore-memory-full-troubleshooting.md)
 
 * [租户内存超限](10.tenant-memory-overrun.md)
 
