--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/10.tenant-memory-overrun.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/10.tenant-memory-overrun.md
@@ -22,13 +22,13 @@ obclient> SELECT tenant_name FROM __all_tenant WHERE tenant_id IN (1006);
 
 查询到对应租户名后，在 OCP 中找到对应集群租户的性能监控展示界面，详细操作信息，请参见 [租户性能监控](../../6.basic-database-management/4.manage-tenants/10.tenant-performance-monitoring.md)。
 
-在租户的 **性能监控** 页面中主要关注指标 **QPS** 、 **响应时间** 、 **TPS** 、 **事务响应时间** 和 `MEMStore`，并找到告警对应时间点，确认是否符合预期。一般在告警时间点附近，以上监控指标变化情况可能包括以下几种情况：
+在租户的 **性能监控** 页面中主要关注指标 **QPS** 、 **响应时间** 、 **TPS** 、 **事务响应时间** 和 `MemStore`，并找到告警对应时间点，确认是否符合预期。一般在告警时间点附近，以上监控指标变化情况可能包括以下几种情况：
 
-* 事务响应时间突然明显升高，其他指标无明显变化趋势，同时 **MEMStore** 指标未达到合并阈值。这种情况说明查询中存在大查询，且大查询消耗内存超过阈值触发了日志告警。
+* 事务响应时间突然明显升高，其他指标无明显变化趋势，同时 **MemStore** 指标未达到合并阈值。这种情况说明查询中存在大查询，且大查询消耗内存超过阈值触发了日志告警。
 
-* 事务响应时间突然明显升高，同时响应时间也有升高趋势但是其他指标变化不明显，且 **MEMStore** 指标未达到合并阈值。这种情况说明租户执行了一些大事务，事务消耗内存超过阈值触发了日志告警，同时对查询性能也造成了一定影响。
+* 事务响应时间突然明显升高，同时响应时间也有升高趋势但是其他指标变化不明显，且 **MemStore** 指标未达到合并阈值。这种情况说明租户执行了一些大事务，事务消耗内存超过阈值触发了日志告警，同时对查询性能也造成了一定影响。
 
-* **QPS** 和 **TPS** 同时有下降趋势，且事务响应时间有升高趋势，而 **MEMStore** 指标已经达到合并阈值但未出现下降。这种情况说明租户可用内存无法通过转储或合并进行释放，很有可能与转储或合并异常有关，详细操作信息，请参见 [合并问题排查](../4.troubleshoot/14.merge-troubleshooting.md)。
+* **QPS** 和 **TPS** 同时有下降趋势，且事务响应时间有升高趋势，而 **MemStore** 指标已经达到合并阈值但未出现下降。这种情况说明租户可用内存无法通过转储或合并进行释放，很有可能与转储或合并异常有关，详细操作信息，请参见 [合并问题排查](../4.troubleshoot/14.merge-troubleshooting.md)。
 
 ### 用户 SQL 监控排查
 
