--- a/zh-CN/1.users-guide/12.reference-guide/1.system-views/3.statistical-event-description.md
+++ b/zh-CN/1.users-guide/12.reference-guide/1.system-views/3.statistical-event-description.md
@@ -56,9 +56,9 @@ obclient> SELECT name FROM v$statname ORDER BY name;
 | io write count | 写 I/O 次数 | 60003 | 32 |
 | io write delay | 写 I/O 延时 | 60004 | 32 |
 | io write bytes | 写 I/O 涉及数据大小 | 60005 | 32 |
-| memstore apply count | MEMTable 执行写入操作的次数 | 60012 | 32 |
-| memstore apply succ count | MEMTable 执行写入操作成功的次数 | 60013 | 32 |
-| memstore apply fail count | MEMTable 执行写入操作失败的次数 | 60014 | 32 |
+| memstore apply count | MemTable 执行写入操作的次数 | 60012 | 32 |
+| memstore apply succ count | MemTable 执行写入操作成功的次数 | 60013 | 32 |
+| memstore apply fail count | MemTable 执行写入操作失败的次数 | 60014 | 32 |
 | memstore row count | 未使用 | 60015 | 32 |
 | memstore read lock succ count | 在行上执行快照读检查成功的次数 | 60019 | 32 |
 | memstore read lock fail count | 在行上执行快照读检查失败的次数 | 60020 | 32 |
@@ -75,11 +75,11 @@ obclient> SELECT name FROM v$statname ORDER BY name;
 | cos io write delay | COS Put 接口调用时延 | 60015 | 32 |
 | clog write count | clog 写盘次数 | 80040 | 256 |
 | clog write time | clog 写盘耗时 | 80041 | 256 |
-| clog trans log total size | MEMTable mutator size 和 trans_header 之和 | 80057 | 256 |
-| active memstore used | 活跃 MEMTable 的内存占用（可能偏大） | 130000 | 32 |
-| total memstore used | 总 MEMTable 的内存占用 | 130001 | 32 |
-| major freeze trigger | MEMTable 触发冻结的内存限制 | 130002 | 32 |
-| memstore limit | MEMTable 总共能够使用的内存 | 130004 | 32 |
+| clog trans log total size | MemTable mutator size 和 trans_header 之和 | 80057 | 256 |
+| active memstore used | 活跃 MemTable 的内存占用（可能偏大） | 130000 | 32 |
+| total memstore used | 总 MemTable 的内存占用 | 130001 | 32 |
+| major freeze trigger | MemTable 触发冻结的内存限制 | 130002 | 32 |
+| memstore limit | MemTable 总共能够使用的内存 | 130004 | 32 |
 | max memory size | 对应租户内存规格的 max_memory | 140002 | 64 |
 | memory usage | 租户实际使用的总内存 | 140003 | 64 |
 | max cpus | 租户 max_cpu * 100 | 140005 | 64 |
