--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/9.tenant-MEMStore-memory-full-troubleshooting.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/9.tenant-MEMStore-memory-full-troubleshooting.md
@@ -1,20 +1,21 @@
-# 租户 MEMStore 内存满问题排查
+# 租户 MemStore 内存满问题排查
 
-本文介绍了租户 MEMStore 内存满问题的排查方法以及常见场景。
+本文介绍了租户 MemStore 内存满问题的排查方法以及常见场景。
 
 ## 问题描述
 
-OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMStore 占用的空间 `total_memstore_used` 增长到 `memstore_limit`，则会出现 MEMStore 内存满导致无法继续写入的情况。此时需要对该问题进行排查，通过定位问题原因来解决问题。
+OBServer MemStore 内存主要用于保存数据库租户增量数据。当 MemStore 占用的空间 `total_memstore_used` 增长到 `memstore_limit`，则会出现 MemStore 内存满导致无法继续写入的情况。此时需要对该问题进行排查，通过定位问题原因来解决问题。
 
 ## 问题排查方法
 
-排查 MEMStore 内存满的问题，一般从以下几个方向入手：冻结、转储、MEMStore 释放。
+排查 MemStore 内存满的问题，一般从以下几个方向入手：冻结、转储、MemStore 释放。
 
 1. 检查冻结情况。
 
    首先查询 `__all_virtual_tenant_memstore_info` 表的 `active_memstore_used` 列确定冻结是否完成。
 
    如果 `active_memstore_used` 的值超过 `major_freeze_trigger`，则说明冻结没有正常执行，需要根据以下步骤进一步检查。
+
    * 确认冻结触发线程。
 
      如果冻结没有正常执行，首先检查触发冻结的线程是否正常工作，搜索关键日志 `====== tenant manager timer task ======` 是否周期性打印。
@@ -29,7 +30,7 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
 
      线程正常的情况下说明是有个别分区无法冻结，这种情况可以通过以下 SQL 查询。
 
-     查看没有冻结的 MEMStore，按照 pkey 查找日志继续定位问题，也可以直接搜索冻结失败的日志。
+     查看没有冻结的 MemStore，按照 pkey 查找日志继续定位问题，也可以直接搜索冻结失败的日志。
 
      ```unknow
      obclient> SELECT * FROM __all_virtual_tenant_memstore_allocator_info WHERE svr_ip='xxx.xxx.xx.xxx' AND tenant_id=xxx AND mt_is_frozen=0 ORDER BY mt_protection_clock limit 10;
@@ -37,18 +38,20 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
 
 2. 检查转储情况。
 
-   如果上述步骤中， `total_memstore_used` 的值大于 `major_freeze_trigger` 的值，且 `active_memstore_used` 的值小于 `major_freeze_trigger` 的值，则说明有冻结的 MEMStore 没有释放，需要先确认冻结的 MEMStore 是否完成了转储。
-   * 确定未释放的 MEMStore。
+   如果上述步骤中， `total_memstore_used` 的值大于 `major_freeze_trigger` 的值，且 `active_memstore_used` 的值小于 `major_freeze_trigger` 的值，则说明有冻结的 MemStore 没有释放，需要先确认冻结的 MemStore 是否完成了转储。
 
-     通过以下 SQL 检查未释放的 MEMStore 的 pkey。
+   * 确定未释放的 MemStore。
+
+     通过以下 SQL 检查未释放的 MemStore 的 pkey。
 
      ```sql
      obclient> SELECT * FROM __all_virtual_tenant_memstore_allocator_info WHERE svr_ip='xxx.xxx.xx.xxx' AND tenant_id=xxx and mt_is_frozen=1 ORDER BY mt_protection_clock limit 10;
      ```
 
-     通过查询到 pkey 查询 `__all_virtual_table_mgr`，继续分析有 MEMStore 不释放的原因。
+     通过查询到 pkey 查询 `__all_virtual_table_mgr`，继续分析有 MemStore 不释放的原因。
 
      可以通过如下查询快速定位未释放的 MemTable。
+
      1. 查看有活跃事务或者引用计数不为 `0` 或者备机读时间戳小于快照点的 MemTable。
 
         ```unknow
@@ -63,16 +66,17 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
 
    * 确认转储调度。
 
-     如果是 MEMStore 没有任何对应的 SSTable 生成，则有可能是 MEMStore 没有满足调度条件：
-     * 备集群读时间戳落后 MEMStore 的 `snapshot_version`。
+     如果是 MemStore 没有任何对应的 SSTable 生成，则有可能是 MemStore 没有满足调度条件：
 
-     * MEMStore 上仍有活跃事务（`trx_count` 不为零）。
+     * 备集群读时间戳落后 MemStore 的 `snapshot_version`。
+
+     * MemStore 上仍有活跃事务（`trx_count` 不为零）。
 
        **注意**
 
        `trx_count` 不为零的情况只有 v2.2.x 版本有影响，v3.x 版本无需关注此字段。
 
-     其中，MEMStore 的 `snapshot_version` 可以从 `__all_virtual_table_mgr` 中获得。
+     其中，MemStore 的 `snapshot_version` 可以从 `__all_virtual_table_mgr` 中获得。
 
      ```unknow
      obclient> SELECT * FROM __all_virtual_table_mgr WHERE svr_ip='xxx.xxx.xx.xxx' AND svr_port=xxx AND table_id=xxx AND partition_id=xxx;
@@ -95,9 +99,9 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
      dag finish.*pkey
      ```
 
-3. 检查 MEMStore 释放情况。
+3. 检查 MemStore 释放情况。
 
-   当 MEMStore 对包含的主表和索引表全部转储完成后，可以通过搜索关键日志 `succeed to release memtable.*pkey`，如果确认存在这条日志，则问题出在 MEMStore 最后的释放阶段，可以通过查询`__all_virtual_table_mgr` 的 `ref` 列确认未释放 MEMStore 的引用计数是否发生泄漏。
+   当 MemStore 对包含的主表和索引表全部转储完成后，可以通过搜索关键日志 `succeed to release memtable.*pkey`，如果确认存在这条日志，则问题出在 MemStore 最后的释放阶段，可以通过查询`__all_virtual_table_mgr` 的 `ref` 列确认未释放 MemStore 的引用计数是否发生泄漏。
 
    ```unknow
    obclient> SELECT table_id, partition_id, base_version, snapshot_version FROM __all_virtual_table_mgr WHERE svr_ip='xxx.xxx.xx.xxx' AND table_type=0 except SELECT table_id, partition_idx, base_version, snapshot_version FROM __all_virtual_memstore_info WHERE svr_ip='xxx.xxx.xx.xxx';
@@ -112,6 +116,7 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
 * 调快转储速度
 
   当转储慢并不是因为基础设施（CPU、IO等）因素造成的瓶颈，那么可以通过以下参数来控制转储发生的时机以及转储的线程个数来调快转储的速度。
+
   * `freeze_trigger_percentage：`MEMstore 使用比例达到阀值触发冻结。
 
   * `minor_merge_concurrency：`转储工作线程数。
@@ -130,6 +135,7 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
   您可以使用 MEMstore 写入限速功能来处理该问题。OceanBase MemStore 写入限速的工作原理是：当租户的 MemStore 内存使用量达到 MemStore 的的 90%(通过配置项 `writing_limit_trigger_percentage` 可调)时，即触发写入限速，此后的内存分配受限。通过增加 query 的运行时间（response time), 从而降低外部的写入速度。 当 MEMstore 的内存恢复到限速水位之下，OceanBase 会周期性地检查并关闭掉 MEMstore 写入限速，使得 MEMstore 在恢复容量的情况下恢复增量数据的处理能力。
 
   OB 的 MEMstore 写入限速是通过以下两个参数进行控制和调整。
+
   * `writing_throttling_trigger_percentage`：控制写入限速的触发。
 
     * `writing_throttling_maximum_duration`：触发写入限速后，剩余MEMstore的内存量预期在writing_throttling_maximum_duration时间内分配完。
@@ -141,9 +147,10 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
 > `writing_throttling_trigger_percentage` 的百分比后，DML 语句的的运行时间会变大，这个是符合技术预期的，如果需要保证 SQL 执行完，有可能是需要将 `ob_query_timout` 及 `ob_trx_timeout` 设置为一个较大的值。但是用户感知的响应时间是会受到影响的。
 
   大多数情况下，通过 `alter system set writing_limit_trigger_percentage=90；`开启写入限速即可。对于写入速度和转储速度悬殊的集群，可以酌情调小 `writing_limit_trigger_percentage` 的值，在生产环境上请谨慎修改该参数。如果在生产环境一定需要调整 `writing_limit_trigger_percentage`，需要在 OceanBase 技术支持的指导下对该参数进行进一步地调整和修改。
-  **注意**
 
-  这两个参数为租户级配置项，如果在 sys 租户下设置的话，需要显示的指定 tenant，否则设置的是 sys 租户的配置项。示例：alter system set writing_throttling_trigger_percentage=90 tenant='oracle'；
+  >**注意**
+  >
+  >这两个参数为租户级配置项，如果在 sys 租户下设置的话，需要显示的指定 tenant，否则设置的是 sys 租户的配置项。示例：alter system set writing_throttling_trigger_percentage=90 tenant='oracle'；
 
   虽然 OceanBase 有能力对大并发的 DML 负载进行 MEMstore 的写入限速，使得大量并发进入到 OBServer 的 DML 语句能够更慢速的操作来保证最终被处理完。但是 OBServer 集群对于同时产生的并发写入始终是有技术上限的，在进行 OceanBase MemStore 做写入限速微调的同时也请同步验证并发 DML 的规模是否合理，如果业务允许请通过降低并发 DML 语句的并发量来保证相应的业务场景完成。
   
