--- a/zh-CN/1.users-guide/12.reference-guide/4.error-codes/4.4500-4999.md
+++ b/zh-CN/1.users-guide/12.reference-guide/4.error-codes/4.4500-4999.md
@@ -35,7 +35,7 @@ ERROR 4519 (HY000) : Iteration was stopped
 
 * OceanBase 错误码：4519
 
-* 错误原因：非错误码，代表 MEMTable 迭代结束。
+* 错误原因：非错误码，代表 MemTable 迭代结束。
 
 * 解决方式：无需处理。
 
@@ -543,7 +543,7 @@ ERROR 4676 (HY000) : need remove unneed table
 
 * OceanBase 错误码：4676
 
-* 错误原因：MEMTable 已经被转储掉了但是还没释放, 下一次转储又遇到这个 MEMTable。
+* 错误原因：MemTable 已经被转储掉了但是还没释放, 下一次转储又遇到这个 MemTable。
 
 * 解决方式：一般不需要处理，详细信息请找技术支持人员协助排查。
 
@@ -552,7 +552,7 @@ ERROR 4677 (HY000) : no need to merge
 
 * OceanBase 错误码：4677
 
-* 错误原因：本次转储调度找不到符合转储条件的 MEMTable 或者 SSTable。
+* 错误原因：本次转储调度找不到符合转储条件的 MemTable 或者 SSTable。
 
 * 解决方式：一般不需要处理，详细信息请找技术支持人员协助排查。
 
@@ -590,7 +590,7 @@ ERROR 4685 (HY000) : active memtable not exist
 
 * OceanBase 错误码：4685
 
-* 错误原因：活跃的 MEMTable 不存在。
+* 错误原因：活跃的 MemTable 不存在。
 
 * 解决方式：内部错误码。请联系技术支持人员确认。
 
