修改 4.alter-resource-pool.md

--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/4.alter-resource-pool.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/4.alter-resource-pool.md
@@ -25,10 +25,10 @@ ALTER RESOURCE POOL {
 |     **参数**      | **描述** |
 |-------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | unit_name       | 指定要使用的资源单元配置的名称。    |
-| unit_num        | 指定修改后一个 Zone 下的资源单元个数，取值要小于等于对应 Zone 中的 OBServer 个数。       |
+| unit_num        | 指定修改后一个 Zone 下的资源单元个数，取值要小于等于对应 Zone 中的 OBServer 节点个数。       |
 | unit_id_list    | 减小 `unit_num` 时，使用 `DELETE UNIT` 可以明确指定本次缩容即将删除的 Unit。 不指定 `DELETE UNIT` 时，系统将自动选择 Unit 进行删除。<blockquote> **注意** </br> 使用 `DELETE UNIT` 明确指定删除的 `unit_id` 时需要还需要满足以下条件：<ul><li>删除的 `unit_id` 列表中，每个 Zone 内删除的 Unit 的数量必须相等，目前认为删除列表中各 Zone 的 Unit 数量不相同的缩容操作非法。</li><li> 删除的 `unit_id` 列表中，每个 Zone 内删除的 Unit 的数量和 `unit_num` 的数量需要匹配。</li></ul>  </blockquote>  |
 | ZONE_LIST \[=\] ('zone' \[, 'zone' ...\]) | 指定资源池的 Zone 列表。     |
-| MERGE           | 合并多个资源池。 合并资源池时，不影响资源池被租户使用，只是在 RootService 的管理层看来是多个资源池合并为一个资源池，方便统一维护。           |
+| MERGE           | 合并多个资源池。 合并资源池时，不影响资源池被租户使用，只是在 Root Service 的管理层看来是多个资源池合并为一个资源池，方便统一维护。           |
 | SPLIT           | 将资源池分裂为几个资源池。       |
 | merge_pool_name | 合并后的资源池名称。          |
 
@@ -69,6 +69,6 @@ ALTER RESOURCE POOL {
 * 假设 `tenant1` 租户使用了三个资源池，分别为 `pool0`、`pool1` 与 `pool2` ，现将三个资源池合并统一管理。
 
   ```sql
-  obclient>ALTER RESOURCE POOL MERGE ('pool0','pool1','pool2') INTO ('pool3');
+  obclient> ALTER RESOURCE POOL MERGE ('pool0','pool1','pool2') INTO ('pool3');
   Query OK, 0 rows affected
   ```
