--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/6.alter-system/3.bootstrap.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/6.alter-system/3.bootstrap.md
@@ -6,7 +6,7 @@
 
 该命令仅需要在 OceanBase 数据库初次启动时执行，每个集群仅能执行一次该命令。如果该命令执行失败，不能重新运行该命令，需要重新搭建 OceanBase 数据库集群。
 
-在执行该命令前，请确保指定的各 OBServer 都已正常启动。
+在执行该命令前，请确保指定的各 OBServer 节点都已正常启动。
 
 ## 语法
 
@@ -37,19 +37,19 @@ ip_port:
 
 |   **参数**    |                **描述**                 |
 |-------------|---------------------------------------|
-| region_name | 指定 RootService 所在的地域，通过在 "多地多中心" 部署时指定。 |
-| zone_name   | 指定 RootService 所属的 Zone。              |
-| ip_port     | 指定 RootService 的 IP 和端口。              |
+| region_name | 指定 Root Service 所在的地域，通过在 "多地多中心" 部署时指定。 |
+| zone_name   | 指定 Root Service 所属的 Zone。              |
+| ip_port     | 指定 Root Service 的 IP 和端口。              |
 
 ## 示例
 
-* 指定 RootService 机器列表进行进行系统自举。
+* 指定 Root Service 机器列表进行进行系统自举。
 
   ```sql
   obclient> ALTER SYSTEM BOOTSTRAP ZONE 'xxxx1' SERVER 'xxx.xxx.xx.xx1:xxxx';
   ```
 
-* RootService 机器列表包含多台 OBServer 时，需要以逗号（,）分隔。
+* Root Service 机器列表包含多台 OBServer 节点时，需要以逗号（,）分隔。
 
   ```sql
   obclient> ALTER SYSTEM BOOTSTRAP ZONE 'xxxx1' SERVER 'xxx.xxx.xx.xx1:xxxx', ZONE 'xxxx2' SERVER 'xxx.xxx.xx.xx2:xxxx', ZONE 'xxxx3' SERVER 'xxx.xxx.xx.xx3:xxxx';
