修改 24.alter-system-zone.md

--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/6.alter-system/24.alter-system-zone.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/6.alter-system/24.alter-system-zone.md
@@ -41,7 +41,7 @@ idc:
 
 ## 示例
 
-删除 Zone，如果 Zone 中存在 OBServer 则删除失败。
+删除 Zone，如果 Zone 中存在 OBServer 节点则删除失败。
 
 ```sql
 obclient> ALTER SYSTEM DELETE ZONE 'z1';
