修改 13.migrate-unit.md

--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/6.alter-system/13.migrate-unit.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/6.alter-system/13.migrate-unit.md
@@ -6,7 +6,7 @@
 
 该语句仅支持在 sys 租户执行。
 
-集群单个 Zone 中多台 OBServer 之间调整资源分布不均衡时，可以调整租户使用的资源分布，以便集群资源使用均衡。在进行 Unit 迁移前，您需要关闭 Unit 均衡，并开启自动切主。
+集群单个 Zone 中多台 OBServer 节点之间调整资源分布不均衡时，可以调整租户使用的资源分布，以便集群资源使用均衡。在进行 Unit 迁移前，您需要关闭 Unit 均衡，并开启自动切主。
 
 ```sql
 obclient> ALTER SYSTEM SET resource_soft_limit = 100;
@@ -35,7 +35,7 @@ unit_id:
 
 ## 示例
 
-将 `unit_id` 为 `1001` 的资源单元迁移到 IP 地址为 `xxx.xxx.xx.xx1` 的 OBServer。
+将 `unit_id` 为 `1001` 的资源单元迁移到 IP 地址为 `xxx.xxx.xx.xx1` 的 OBServer 节点。
 
 ```sql
 obclient> ALTER SYSTEM MIGRATE UNIT = 1001 DESTINATION = 'xxx.xxx.xx.xx1:xxxx';
