--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/6.alter-system/15.refresh.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/6.alter-system/15.refresh.md
@@ -42,7 +42,7 @@ tenant:
 
 |         **参数**         |  **描述**   |
 |------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| REFRESH SCHEMA         | 刷新 Schema。正常情况下，当系统执行 DDL 操作， RootService 都会主动通知所有 OBServer 刷新 Schema。当某些 OBServer 发生异常，和 RootService 网络中断，此时需要手动刷新 Schema。刷新 Schema 可以针对单独的机器，也可以针对某个集群。 |
+| REFRESH SCHEMA         | 刷新 Schema。正常情况下，当系统执行 DDL 操作， Root Service 都会主动通知所有 OBServer 节点刷新 Schema。当某些 OBServer 节点发生异常，和 Root Service 网络中断，此时需要手动刷新 Schema。刷新 Schema 可以针对单独的机器，也可以针对某个集群。 |
 | REFRESH TIME_ZONE_INFO | 通知集群中的所有 Server 更新本地的时区信息。  |
 | FLUSH cache_type CACHE | 清空指定 Cache 指令。 <blockquote>**说明** </br> 当前版本暂不支持该参数。</blockquote>  |
 | FLUSH KVCACHE | 清空 KV Cache 指令。 <ul><li>如果指定 `tenant` 和 `cache_name`，则清除指定租户的指定 KV Cache。</li><li> 如果只指定 `tenant`，则清除指定租户的全部 KV Cache。  </li><li> 如果不指定 `tenant` 和 `cache_name`，则清除所有租户的全部 KV Cache。 </li></ul>   |
