修改 15.uuid_short.md

--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/15.uuid_short.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/15.uuid_short.md
@@ -14,9 +14,9 @@ UUID_SHORT()
 
 * 当前服务器的 `server_id` 值介于 0 到 255 之间，并且在一组源服务器和副本服务器中是唯一的。如果`server_id` 总数大于 256，则生成的"短"通用标识符无法保证空间唯一性，尽管此函数不会报错。
 
-* 不要在 OBServer 重新启动期间设置服务器主机的系统时间。
+* 不要在 OBServer 节点重新启动期间设置服务器主机的系统时间。
 
-* 在 OBServer 重新启动期间平均每秒调用 `UUID_SHORT()` 少于 1600 万次。
+* 在 OBServer 节点重新启动期间平均每秒调用 `UUID_SHORT()` 少于 1600 万次。
 
 `UUID_SHORT()` 返回值的构造如下：
 
