315ip和密码脱敏

--- a/zh-CN/1.users-guide/2.Get-started-quickly/0.Quickly-experience-OceanBase.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/0.Quickly-experience-OceanBase.md
@@ -92,7 +92,7 @@ sudo yum install -y obclient
 obclient -h127.0.0.1 -P2881 -uroot@test
 ```
 
-OBClient 默认使用端口 2881 来连接 OBServer，如果您对端口做了更改，此处使用您实际的端口号。tenant_name 为您将要连接的租户名。
+OBClient 默认使用端口 2881 来连接 OBServer 节点，如果您对端口做了更改，此处使用您实际的端口号。tenant_name 为您将要连接的租户名。
 
 您可执行以下命令检查租户信息：
 
