--- a/zh-CN/1.users-guide/2.Get-started-quickly/2.Create-a-sample-application/2.connect-to-oceanbase-through-golang-driver.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/2.Create-a-sample-application/2.connect-to-oceanbase-through-golang-driver.md
@@ -33,7 +33,7 @@ go get -u github.com/go-sql-driver/mysql
 
 >**注意**
 >
->部分版本 go install 的默认执行目录可能不是 `/src`，可以通过 go install 执行后的报错判断实际目录。例如，报错 `cannot find package "mysql" in: /usr/local/go/src/vendor/mysql`，则应该将 mysql 文件夹放在 `/src/vendor` 目录下再执行安装命令。
+>部分版本 go install 的默认执行目录可能不是 `/src`，可以通过 go install 执行后的报错判断实际目录。例如，报错 `cannot find package "mysql" in: /usr/local/go/src/vendor/mysql`，则应该将 MySQL 文件夹放在 `/src/vendor` 目录下再执行安装命令。
 
 ## 如何使用
 
@@ -110,9 +110,9 @@ conn := "{username}:{password}@tcp({hostname}:{port})/{dbname}"
 
 * **password**：账户密码。
 
-* **hostname**：OceanBase 数据库连接 IP，通常是一个 OBProxy 地址。
+* **hostname**：OceanBase 数据库连接 IP，通常是一个 ODP 地址。
 
-* **port**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口，默认是 2883，可以自定义。
+* **port**：OceanBase 数据库连接端口，也是 ODP 的监听端口，默认是 2883，可以自定义。
 
 * **dbname**：需要访问的数据库名称。
 
