--- a/zh-CN/1.users-guide/4.data-migration/10.use-DBCAT-to-migrate-MySQL-table-structure-to-OceanBase-database.md
+++ b/zh-CN/1.users-guide/4.data-migration/10.use-DBCAT-to-migrate-MySQL-table-structure-to-OceanBase-database.md
@@ -71,7 +71,7 @@ $tree -L 3 --filelimit 30
 ```bash
 bin/dbcat convert -H<host> -P<port> -u<user> -p<password>  -D <database> --from <from> --to <to> --all
 
-bin/dbcat convert -H 127.1 -P 3306 -ur*** -p123456 -D tpccdb --from mysql56 --to obmysql2230 --all
+bin/dbcat convert -H 127.1 -P 3306 -u**** -p****** -D tpccdb --from mysql56 --to obmysql2230 --all
 ```
 
 特别说明：
