--- a/zh-CN/1.users-guide/4.data-migration/9.migrate-MySQL-data-to-OceanBase-database-using-dataX.md
+++ b/zh-CN/1.users-guide/4.data-migration/9.migrate-MySQL-data-to-OceanBase-database-using-dataX.md
@@ -127,7 +127,7 @@ target/datax/datax/plugin/writer/oceanbasev10writer/plugin_job_template.json
                                 ]
                             }
                         ],
-                        "password": "",
+                        "password": "******",
                         "readBatchSize": 100000,
                         "username": "",
                         "weakRead": false
@@ -148,7 +148,7 @@ target/datax/datax/plugin/writer/oceanbasev10writer/plugin_job_template.json
                             }
                         ],
                         "obWriteMode": "insert",
-                        "password": "",
+                        "password": "******",
                         "preSql": [
                             ""
                         ],
