--- a/zh-CN/1.users-guide/5.database-connection-and-routing/3.physical-connection.md
+++ b/zh-CN/1.users-guide/5.database-connection-and-routing/3.physical-connection.md
@@ -25,7 +25,7 @@
   | User              | 用户                                                                                                                                                                                                                                                                                                                                      |
   | Host              | 用户 IP 和端口号                                                                                                                                                                                                                                                                                                                              |
   | db                | 数据库                                                                                                                                                                                                                                                                                                                                     |
-  | trans_count       | OBProxy 传输的事务数量                                                                                                                                                                                                                                                                                                                         |
+  | trans_count       | ODP 传输的事务数量                                                                                                                                                                                                                                                                                                                         |
   | svr_session_count | 会话数量                                                                                                                                                                                                                                                                                                                                    |
   | state             | 客户端会话状态，存在如下几个状态： *MCS_INIT（初始化）* MCS_ACTIVE_READER（激活）   *MCS_KEEP_ALIVE（保活）* MCS_HALF_CLOSE（半关闭）   * MCS_CLOSED（已关闭）    |
   | tid               | 线程 ID                                                                                                                                                                                                                                                                                                                                   |
