--- a/zh-CN/1.users-guide/5.database-connection-and-routing/5.logical-connection/2.show-detailed-session-status.md
+++ b/zh-CN/1.users-guide/5.database-connection-and-routing/5.logical-connection/2.show-detailed-session-status.md
@@ -57,7 +57,7 @@ obclient> SHOW PROXYSESSION ATTRIBUTE;
 | user_var_version       | 0                   | cs var version |
 | last_insert_id_version | 0                   | cs var version |
 | db_name_version        | 0                   | cs var version |
-| server_ip              | 10.244.4.28         | last used ss   |
+| server_ip              | xxx.xxx.xxx.xxx     | last used ss   |
 | server_port            | 13203               | last used ss   |
 | server_sessid          | 2147549201          | last used ss   |
 | ss_id                  | 4                   | last used ss   |
