--- a/zh-CN/1.users-guide/2.Get-started-quickly/2.Create-a-sample-application/3.connect-to-oceanbase-through-java-driver.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/2.Create-a-sample-application/3.connect-to-oceanbase-through-java-driver.md
@@ -63,9 +63,9 @@ public class Test {
 connection = DriverManager.getConnection("jdbc:mysql://{hostname}:{port}/{dbname}?user={username}&password={password}")
 ```
 
-* **hostname**：OceanBase 数据库连接 IP，通常是一个 OBProxy 地址。
+* **hostname**：OceanBase 数据库连接 IP，通常是一个 ODP 地址。
 
-* **port**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口，默认是 2883，可以自定义。
+* **port**：OceanBase 数据库连接端口，也是 ODP 的监听端口，默认是 2883，可以自定义。
 
 * **dbname**：需要访问的数据库名称。
 
