--- a/zh-CN/1.users-guide/2.Get-started-quickly/2.Create-a-sample-application/4.connect-to-oceanbase-through-c-driver.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/2.Create-a-sample-application/4.connect-to-oceanbase-through-c-driver.md
@@ -14,7 +14,7 @@
 
 ### Linux 安装
 
-获取 OceanBase Connector/C 安装包（即 libobclient）和 obclient 安装包。
+获取 OceanBase Connector/C 安装包（即 libobclient）和 OBClient 安装包。
 
 下载安装包，请参考 [软硬件要求](../../../1.users-guide/3.installation-and-deployment/2.download-installation-packages.md) 中 **软件资源介绍**，根据自身的系统版本在镜像库中找到需要的安装包。
 
@@ -24,7 +24,7 @@
    sudo rpm -ivh libobclient-xx.x86_64.rpm
    ```
 
-2. 安装 obclient。
+2. 安装 OBClient。
 
    ```c
    sudo rpm -ivh obclient-xx.x86_64.rpm
@@ -32,11 +32,11 @@
 
    >**说明**
    >
-   >由于 obclient 依赖于 libobclient，所以需要先安装 libobclient。
+   >由于 OBClient 依赖于 libobclient，所以需要先安装 libobclient。
 
 ### 从源代码编译
 
-OceanBase 的 Github 仓库提供 [obclient](https://github.com/oceanbase/obclient) 的最新开发版本的源代码（包含子库 libobclient）。
+OceanBase 的 Github 仓库提供 [OBClient](https://github.com/oceanbase/obclient) 的最新开发版本的源代码（包含子库 libobclient）。
 
 1. 安装依赖工具。
 
@@ -68,21 +68,21 @@ OceanBase 的 Github 仓库提供 [obclient](https://github.com/oceanbase/obclie
          sh libobclient-build.sh
          ```
 
-   4. 执行 obclient 编译。
+   4. 执行 OBClient 编译。
 
          ```bash
          cd ../..  #回到 obclient 目录
          sh build.sh
          ````
 
-   5. 打包 obclient 的 RPM 安装包。
+   5. 打包 OBClient 的 RPM 安装包。
 
          ```bash
          cd rpm
          sh obclient-build.sh
          ```
 
-3. 安装 libobclient 和 obclient。
+3. 安装 libobclient 和 OBClient。
 
    ```bash
    cd /obclient/libmariadb/rpm
@@ -93,11 +93,11 @@ OceanBase 的 Github 仓库提供 [obclient](https://github.com/oceanbase/obclie
 
    >**说明**
    >
-   >由于 obclient 依赖于 libobclient，所以需要先安装 libobclient。
+   >由于 OBClient 依赖于 libobclient，所以需要先安装 libobclient。
 
 ## 操作示例
 
-应用程序通过 OceanBase Connector/C 与数据库服务器 OBServer 交互的基本方式如下：
+应用程序通过 OceanBase Connector/C 与数据库服务器 OBServer 节点交互的基本方式如下：
 
 1. 调用 `mysql_library_init()` 初始化 MySQL 库。
 
@@ -111,14 +111,14 @@ OceanBase 的 Github 仓库提供 [obclient](https://github.com/oceanbase/obclie
    MYSQL *mysql = mysql_init(NULL);
    ```
 
-3. 调用 `mysql_real_connect()` 连接到 OBServer。
+3. 调用 `mysql_real_connect()` 连接到 OBServer 节点。
 
    ```c
    mysql_real_connect (mysql, host_name, user_name, password,
    db_name, port_num, socket_name, CLIENT_MULTI_STATEMENTS)
    ```
 
-4. 调用 `mysql_real_query()` 或 `mysql_query()` 向 OBServer 发送 SQL 语句。
+4. 调用 `mysql_real_query()` 或 `mysql_query()` 向 OBServer 节点发送 SQL 语句。
 
    ```c
    mysql_query(mysql,"sql_statement");
@@ -136,7 +136,7 @@ OceanBase 的 Github 仓库提供 [obclient](https://github.com/oceanbase/obclie
    mysql_free_result(result);
    ```
 
-7. 调用 `mysql_close()` 关闭与 OBServer 的连接。
+7. 调用 `mysql_close()` 关闭与 OBServer 节点的连接。
 
    ```c
    mysql_close(mysql);
@@ -227,7 +227,7 @@ int main(int argc, char** argv)
 
 参数说明：
 
-* **hostname**：OceanBase 数据库连接 IP，通常是一个 OBProxy 地址。
+* **hostname**：OceanBase 数据库连接 IP，通常是一个 ODP 地址。
 
 * **username**：租户的连接账户，租户的管理员用户名默认是 `root`。
 
@@ -235,7 +235,7 @@ int main(int argc, char** argv)
 
 * **dbname**：需要访问的数据库名称。
 
-* **port**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口，默认是 2883，可以自定义。
+* **port**：OceanBase 数据库连接端口，也是 ODP 的监听端口，默认是 2883，可以自定义。
 
 代码编辑完成后，可以通过如下命令进行编译和执行：
 
@@ -250,7 +250,7 @@ export LD_LIBRARY_PATH=/u01/obclient/lib
 
 >**说明**
 >
->obclient 安装的默认路径为 `/u01/obclient`。
+>OBClient 安装的默认路径为 `/u01/obclient`。
 
 ## 相关内容
 
