--- a/zh-CN/1.users-guide/4.data-migration/4.migrate-using-MySQLDump.md
+++ b/zh-CN/1.users-guide/4.data-migration/4.migrate-using-MySQLDump.md
@@ -26,7 +26,7 @@ obclient> SET GLOBAL ob_trx_timeout=1000000000,GLOBAL ob_query_timeout=100000000
 下述示例语句展示了如何在 MySQLDump 中备份 OceanBase 数据库中的数据，运行该语句后会生成一个 SQL 格式的文件：
 
 ```unknow
-mysqldump -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p**1*** --skip-triggers  --databases db1  db2  db3  --skip-extended-insert  > /tmp/data.sql
+mysqldump -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** --skip-triggers  --databases db1  db2  db3  --skip-extended-insert  > /tmp/data.sql
 ```
 
 下述表格为上述备份语句的参数说明：
@@ -58,7 +58,7 @@ source  /tmp/data.sql
 ### 导出指定数据库的表结构（不包括数据）
 
 ```sql
-mysqldump -h 127.1 -uroot -P3306 -p**1***  -d TPCH --compact > tpch_ddl.sql
+mysqldump -h 127.1 -uroot -P3306 -p******  -d TPCH --compact > tpch_ddl.sql
 ```
 
 在导出的脚本中：
@@ -83,6 +83,7 @@ CREATE TABLE `NATION` (
 ```
 
 在示例中，导出的脚本里有一个 `MAX_ROWS=` 的设置，这个是 MySQL 特有的，OceanBase MySQL 没有这个问题，也不需要这个设置，且不支持这个语法。您需要把所有 `MAX_ROWS=` 以及后面部分注释掉。注释方式可以使用批量替换技术，例如，在 Vim 中使用 `:%s/MAX_ROWS=/; -- MAX_ROWS=/g`。
+
 >**注意**
 >
 >上面导出的 SQL 中表名是大写，说明源端 MySQL 设置表名默认很可能是大小写敏感，因此目标 OceanBase MySQL 租户也要进行同样的设置。
@@ -102,12 +103,12 @@ MySQL [oceanbase]> show global variables like '%foreign%';
 1 row in set (0.00 sec)
 ```
 
-在 obclient 里通过 `source` 命令可以执行外部 SQL 脚本文件。
+在 OBClient 里通过 `source` 命令可以执行外部 SQL 脚本文件。
 
 ### 导出指定数据库的表数据（不包括结构）
 
 ```unknow
-mysqldump -h 127.1 -uroot -P3306 -p**1*** -t TPCH  > tpch_data.sql
+mysqldump -h 127.1 -uroot -P3306 -p****** -t TPCH  > tpch_data.sql
 ```
 
 MySQLDump 导出的数据初始化 SQL 里会首先将表锁住，禁止其他会话写。然后使用 `insert` 写入数据。每个 `insert` 后面的 `value` 里会有很多值。这是批量 `insert`。
