--- a/zh-CN/1.users-guide/4.data-migration/7.use-canal-to-synchronize-MySQL-data-to-OceanBase-database-in-real-time.md
+++ b/zh-CN/1.users-guide/4.data-migration/7.use-canal-to-synchronize-MySQL-data-to-OceanBase-database-in-real-time.md
@@ -107,7 +107,7 @@ FLUSH PRIVILEGES;
     address: 127.0.0.1:3306
     database: canal_manager
     username: canal
-    password: canal
+    password: ******
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://${spring.datasource.address}/${spring.datasource.database}?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     hikari:
@@ -208,7 +208,7 @@ FLUSH PRIVILEGES;
   #canal.instance.standby.timestamp =
   #username/password，需要改成自己的数据库信息
   canal.instance.dbUsername = canal  
-  canal.instance.dbPassword = canal
+  canal.instance.dbPassword = ******
   canal.instance.defaultDatabaseName =
   canal.instance.connectionCharset = UTF-8
   #table regex
@@ -227,7 +227,7 @@ FLUSH PRIVILEGES;
   canal.admin.manager = 127.0.0.1:8089
   canal.admin.port = 11110
   canal.admin.user = admin
-  canal.admin.passwd = 4ACFE3202A5FF5CF467898FC58AAB1D615029441
+  canal.admin.passwd = ****************************************
   # admin auto register
   canal.admin.register.auto = true
   canal.admin.register.cluster =
@@ -242,7 +242,7 @@ FLUSH PRIVILEGES;
   +-------------------------------------------+
   | password('admin')                         |
   +-------------------------------------------+
-  | *4ACFE3202A5FF5CF467898FC58AAB1D61502**** |
+  | **************************************** |
   +-------------------------------------------+
   1 row in set (0.00 sec)
   ```
@@ -257,7 +257,7 @@ FLUSH PRIVILEGES;
 
 * （可选）图形化部署 Canal server 和 Canal instance
 
-  如果使用 Canal Admin 管理 Canal server，则登录 admin 的管理界面 <http://172.24.50.39:8089/#/canalServer/nodeServers>，选择 **Canal Server** \> **Server 管理**，单击 **新建 Server**。
+  如果使用 Canal Admin 管理 Canal server，则登录 admin 的管理界面 <http://xxx.xxx.xxx.xxx:8089/#/canalServer/nodeServers>，选择 **Canal Server** \> **Server 管理**，单击 **新建 Server**。
 
   > **说明**
   >
@@ -347,7 +347,7 @@ Adapter 的需要手动部署。
       canal.tcp.zookeeper.hosts:
       canal.tcp.batch.size: 500
       canal.tcp.username: tpch
-      canal.tcp.password: Dg0gIe****
+      canal.tcp.password: ******
     canalAdapters:
     - instance: mariadb # canal instance Name or mq topic name
       groups:
@@ -360,7 +360,7 @@ Adapter 的需要手动部署。
             jdbc.driverClassName: com.mysql.jdbc.Driver
             jdbc.url: jdbc:mysql://127.0.0.1:2883/tpch?useUnicode=true
             jdbc.username: ****@obmysql#obdemo
-            jdbc.password: Dg0gIe****  
+            jdbc.password: ******  
   ```
 
 * RDB 映射文件
