--- a/zh-CN/1.users-guide/5.database-connection-and-routing/2.obproxy-management/4.obproxy-parameter-description.md
+++ b/zh-CN/1.users-guide/5.database-connection-and-routing/2.obproxy-management/4.obproxy-parameter-description.md
@@ -1,40 +1,40 @@
-OBProxy 参数说明
+ODP 参数说明
 =================================
 
-创建 OBProxy 集群时，可在 **参数设置** 中配置启动参数。本文为您介绍 OBProxy 启动参数说明。
+创建 ODP 集群时，可在 **参数设置** 中配置启动参数。本文为您介绍 ODP 启动参数说明。
 
-OBProxy 的参数分为启动参数和其他参数，有关其他参数的详细信息，请参见《 ODP 用户指南》中的 **配置** 。
+ODP 的参数分为启动参数和其他参数，有关其他参数的详细信息，请参见 《ODP 用户指南》中的 **配置** 。
 
 启动参数
 -------------------------
 
-创建 OBProxy 集群时，可参考如下说明配置启动参数。若未配置，系统将按照默认值创建 OBProxy。
+创建 ODP 集群时，可参考如下说明配置启动参数。若未配置，系统将按照默认值创建 ODP。
 
 |             参数名              |         默认值         |                                                   取值范围                                                    |                                                                                                             说明                                                                                                              |
 |------------------------------|---------------------|-----------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | app_name                     | dropship            | -                                                                                                         | Proxy 的应用服务名。                                                                                                                                                                                                               |
 | automatic_match_work_thread  | true                | *true* false       | 是否根据 CPU 核数自动创建工作线程。如果该选项为 true，上限为 work_thread_num。                                                                                                                                                                        |
-| block_thread_num             | 1                   | \[1, 4\]                                                                                                  | OBProxy 阻塞型任务线程数，用于线程初始化。                                                                                                                                                                                                   |
+| block_thread_num             | 1                   | \[1, 4\]                                                                                                  | ODP 阻塞型任务线程数，用于线程初始化。                                                                                                                                                                                                   |
 | bt_retry_times               | -                   | -                                                                                                         | 已废弃，后续将从环境中删除。                                                                                                                                                                                                              |
 | enable_cpu_topology          | false               | *true* false       | 是否开启 CPU 亲和，即是否把每个 worker 线程绑定到不同的 CPU 上。                                                                                                                                                                                   |
-| enable_metadb_used           | false               | *true* false       | OBProxy 运行时是否可访问 OCP 的 MetaDB。                                                                                                                                                                                              |
+| enable_metadb_used           | false               | *true* false       | ODP 运行时是否可访问 OCP 的 MetaDB。                                                                                                                                                                                              |
 | enable_strict_kernel_release | false               | *true* false       | 是否需要校验 OS kernel。 取值范围： *true：仅 5u/6u/7u 规格的 RedHat 操作系统支持校验。* false：不校验 OS kernel，但 Proxy 可能不稳定。    |
 | frequent_accept              | true                | *true* false       | 是否初始化 net accept 参数。                                                                                                                                                                                                        |
 | grpc_client_num              | 9                   | \[9,16\]                                                                                                  | grpc 客户端数。                                                                                                                                                                                                                  |
 | grpc_thread_num              | 8                   | \[8,16\]                                                                                                  | grpc 线程数。                                                                                                                                                                                                                   |
-| listen_port                  | 2883                | (1024, 65536)                                                                                             | OBProxy 的监听端口。                                                                                                                                                                                                              |
-| local_bound_ip               | 0.0.0.0             | -                                                                                                         | OBProxy 的本地 IP。                                                                                                                                                                                                             |
+| listen_port                  | 2883                | (1024, 65536)                                                                                             | ODP 的监听端口。                                                                                                                                                                                                              |
+| local_bound_ip               | 0.0.0.0             | -                                                                                                         | ODP 的本地 IP。                                                                                                                                                                                                             |
 | net_accept_threads           | 2                   | \[0, 8\]                                                                                                  | 执行 accept 的线程数。                                                                                                                                                                                                             |
 | obproxy_config_server_url    | -                   | -                                                                                                         | OCP 对外的 configurl 服务地址。                                                                                                                                                                                                     |
 | prometheus_cost_ms_unit      | false               | *true* false       | 是否允许 prometheus 的成本单位为毫秒，默认为微秒。                                                                                                                                                                                             |
-| prometheus_listen_port       | 2884                | (1024, 65536)                                                                                             | OBProxy prometheus 监听端口。                                                                                                                                                                                                    |
-| proxy_id                     | 0                   | \[0,255\]                                                                                                 | OBProxy 的 ID，用于标识每个 OBProxy。当 proxy_service_mode  配置为 server 时，proxy_id 不可配置为 0。                                                                                                                                            |
-| proxy_service_mode           | client              | *client* server    | OBProxy 的部署和服务模式。                                                                                                                                                                                                           |
-| rootservice_cluster_name     | -                   | -                                                                                                         | RootService 列表的默认集群名。                                                                                                                                                                                                       |
-| rootservice_list             | 100.81.xx.xx:2881 | -                                                                                                         | RootService 列表。 格式为 ip1:sql_port1;ip2:sql_port2                                                                                                                                                             |
-| skip_proxy_sys_private_check | true                | *true* false       | 是否跳过 OBProxy 在私有网段的检查。                                                                                                                                                                                                      |
+| prometheus_listen_port       | 2884                | (1024, 65536)                                                                                             | ODP prometheus 监听端口。                                                                                                                                                                                                    |
+| proxy_id                     | 0                   | \[0,255\]                                                                                                 | ODP 的 ID，用于标识每个 ODP。当 proxy_service_mode  配置为 server 时，proxy_id 不可配置为 0。                                                                                                                                            |
+| proxy_service_mode           | client              | *client* server    | ODP 的部署和服务模式。                                                                                                                                                                                                           |
+| rootservice_cluster_name     | -                   | -                                                                                                         | Root Service 列表的默认集群名。                                                                                                                                                                                                       |
+| rootservice_list             | 100.81.xx.xx:2881 | -                                                                                                         | Root Service 列表。 格式为 ip1:sql_port1;ip2:sql_port2                                                                                                                                                             |
+| skip_proxy_sys_private_check | true                | *true* false       | 是否跳过 ODP 在私有网段的检查。                                                                                                                                                                                                      |
 | spool_thread_num             | -                   | -                                                                                                         | 已废弃，后续将从环境中删除。                                                                                                                                                                                                              |
 | stack_size                   | 1MB                 | \[1MB, 10MB\]                                                                                             | 线程栈大小，用于创建线程。                                                                                                                                                                                                               |
-| enable_proxy_scramble        | true                | *true* false       | 是否启用 OBProxy 的挑战随机数。                                                                                                                                                                                                        |
-| task_thread_num              | 2                   | \[1, 4\]                                                                                                  | OBProxy 任务线程数。                                                                                                                                                                                                              |
-| work_thread_num              | 128                 | \[1, 128\]                                                                                                | OBProxy 工作线程数。 当 automatic_match_work_thread 为true 时，表示最大工作线程数。                                                                                                                                             |
+| enable_proxy_scramble        | true                | *true* false       | 是否启用 ODP 的挑战随机数。                                                                                                                                                                                                        |
+| task_thread_num              | 2                   | \[1, 4\]                                                                                                  | ODP 任务线程数。                                                                                                                                                                                                              |
+| work_thread_num              | 128                 | \[1, 128\]                                                                                                | ODP 工作线程数。 当 automatic_match_work_thread 为true 时，表示最大工作线程数。                                                                                                                                             |
