--- a/zh-CN/1.users-guide/6.basic-database-management/4.manage-tenants/5.manage-users-and-privileges/2.create-a-user.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/4.manage-tenants/5.manage-users-and-privileges/2.create-a-user.md
@@ -67,7 +67,7 @@ tls_option:
 2. 执行以下命令，创建用户 `user2`。
 
    ```sql
-   obclient> CREATE USER 'user2' IDENTIFIED BY '**1***';
+   obclient> CREATE USER 'user2' IDENTIFIED BY '******';
    ```
 
 3. 执行以下命令，授予用户 `user2` 访问数据库 `db1` 中所有表的权限。
