--- a/zh-CN/1.users-guide/6.basic-database-management/4.manage-tenants/5.manage-users-and-privileges/7.change-user-password.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/4.manage-tenants/5.manage-users-and-privileges/7.change-user-password.md
@@ -11,13 +11,13 @@
 SQL 语句如下：
 
 ```sql
-obclient> ALTER USER username IDENTIFIED BY 'password';
+obclient> ALTER USER username IDENTIFIED BY '******';
 ```
 
 将用户 `sqluser01` 的密码修改为 \*\*\*`1**` 的示例如下：
 
 ```sql
-obclient> ALTER USER sqluser01 IDENTIFIED BY '***1**';
+obclient> ALTER USER sqluser01 IDENTIFIED BY '******';
 ```
 
 更多 `ALTER USER` 语句的信息请参见 [ALTER USER](../../../../14.developer-guide/7.sql-reference/5.sql-statements/10.alter-user.md)。
@@ -29,7 +29,7 @@ obclient> ALTER USER sqluser01 IDENTIFIED BY '***1**';
 SQL 语法如下：
 
 ```sql
-obclient> SET PASSWORD [FOR user] = PASSWORD('password');
+obclient> SET PASSWORD [FOR user] = PASSWORD('******');
 ```
 
 语句使用说明：
@@ -43,7 +43,7 @@ obclient> SET PASSWORD [FOR user] = PASSWORD('password');
 将用户 `sqluser01` 的密码修改为 \*\*\*`1**` 的示例如下：
 
 ```sql
-obclient> SET PASSWORD FOR sqluser01 = password('***1**');
+obclient> SET PASSWORD FOR sqluser01 = password('******');
 Query OK, 0 rows affected
 ```
 
