--- a/zh-CN/1.users-guide/6.basic-database-management/4.manage-tenants/5.manage-users-and-privileges/8.lock-and-unlock-users.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/4.manage-tenants/5.manage-users-and-privileges/8.lock-and-unlock-users.md
@@ -22,7 +22,7 @@ ALTER USER user_name {ACCOUNT LOCK | ACCOUNT UNLOCK};
   obclient> ALTER USER demo ACCOUNT LOCK;
   Query OK, 0 rows affected
   
-  obclient -u****@**** -P2881 -h10.10.10.1   -p***1**
+  obclient -u****@**** -P2881 -h10.10.10.1   -p******
   obclient: [Warning] Using a password on the command line interface can be insecure.
   ERROR 3118 (HY000): User locked
   ```
@@ -33,7 +33,7 @@ ALTER USER user_name {ACCOUNT LOCK | ACCOUNT UNLOCK};
   obclient> ALTER USER demo ACCOUNT UNLOCK;
   Query OK, 0 rows affected (0.02 sec)
   
-  obclient -u****@**** -P2881 -h10.10.10.1   -p***1**
+  obclient -u****@**** -P2881 -h10.10.10.1   -p******
   obclient: [Warning] Using a password on the command line interface can be insecure.
   Welcome to the OceanBase.  Commands end with ; or \g.
   Your MySQL connection id is 5751
