--- a/zh-CN/1.users-guide/2.Get-started-quickly/2.Create-a-sample-application/3.connect-to-oceanbase-through-java-driver.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/2.Create-a-sample-application/3.connect-to-oceanbase-through-java-driver.md
@@ -73,7 +73,7 @@ connection = DriverManager.getConnection("jdbc:mysql://{hostname}:{port}/{dbname
 
 * **password**：账户密码。
 
-示例：`jdbc:mysql://172.30.xx.xx:2883/test?user=r***&password=***1**`
+示例：`jdbc:mysql://172.30.xx.xx:2883/test?user=r***&password=******`
 
 代码编辑完成后，可以通过如下命令进行编译和执行，返回 true 说明数据库连接成功。
 
