--- a/zh-CN/1.users-guide/4.data-migration/14.Import-data-into-OceanBase-database-using-OBDUMPER-OBLOADER.md
+++ b/zh-CN/1.users-guide/4.data-migration/14.Import-data-into-OceanBase-database-using-OBDUMPER-OBLOADER.md
@@ -322,7 +322,7 @@ Total Count: 1          End Time: 2021-09-29 21:26:06
 ### 导入数据
 
 ```bash
-[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obloader -h xxx.xxx.xxx.xxx -P 2883 -u u_loader -p 123456 --sys-user=proxyro --sys-password=uY7Yf8zx -c obce-3zones -t obmysql -D test2 --csv --all -f /tmp/obdumper
+[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obloader -h xxx.xxx.xxx.xxx -P 2883 -u u_loader -p ****** --sys-user=proxyro --sys-password=****** -c obce-3zones -t obmysql -D test2 --csv --all -f /tmp/obdumper
 2021-09-29 21:27:53 [INFO] Parsed args:
 -h[--host] xxx.xxx.xxx.xxx
 -P[--port] 2883
