--- a/zh-CN/14.developer-guide/7.common-errors-and-solutions/2.database-connection-errors.md
+++ b/zh-CN/14.developer-guide/7.common-errors-and-solutions/2.database-connection-errors.md
@@ -18,7 +18,7 @@ Got error: 2002: "Can't connect to local MySQL server through socket '/var/lib/m
 
 ```sql
 [admin@**** /home/admin]
-$obclient -h10.10.10.1 -P2881 -uroot@MySQL -p_***2***_ -A
+$obclient -h10.10.10.1 -P2881 -uroot@MySQL -p****** -A
 mysql: Got error: 2002: "Can't connect to local MySQL server through socket '/var/lib/mysql/mysql.sock' (2)" when trying to connect
 ```
 
