--- a/zh-CN/1.users-guide/3.installation-and-deployment/16.deploy-ob-in-kubernetes-via-ob-operator.md
+++ b/zh-CN/1.users-guide/3.installation-and-deployment/16.deploy-ob-in-kubernetes-via-ob-operator.md
@@ -279,16 +279,16 @@ obproxy-service   NodePort   1.1.1.1   <none>        2883:30083/TCP,2884:30084/T
 
 ```shell
 # use clusterip without password
-obclient -h1.1.1.1 -P2883 -uroot oceanbase -A -c
+obclient -h1.1.1.1 -P2883 -uroot -A -c
 
 # use clusterip with password
-obclient -h1.1.1.1 -P2883 -uroot -p oceanbase -A -c
+obclient -h1.1.1.1 -P2883 -uroot -p ****** -A -c
 
 # using nodeport without password
-obclient -h<node_ip> -P30083 -uroot oceanbase -A -c
+obclient -h<node_ip> -P30083 -uroot -A -c
 
 # using nodeport with password
-obclient -h<node_ip> -P30083 -uroot -p oceanbase -A -c
+obclient -h<node_ip> -P30083 -uroot -p ****** -A -c
 ```
 
 ## 监控 OceanBase 数据库
