--- a/zh-CN/1.users-guide/4.data-migration/11.use-the-LOAD-command-to-load-the-CSV-data-file-into-the-OceanBase-database.md
+++ b/zh-CN/1.users-guide/4.data-migration/11.use-the-LOAD-command-to-load-the-CSV-data-file-into-the-OceanBase-database.md
@@ -118,7 +118,7 @@ Row ErrCode ErrMsg
 以上一节 MySQL 里导出的 `t1.csv` 为例，导入到 OceanBase 数据库。
 
 ```sql
-$ mysql -h127.1 -u****@obmysql#obdemo -P2881 -p123456 -c -A test -Ns
+$ mysql -h127.1 -u****@obmysql#obdemo -P2881 -p****** -c -A test -Ns
 MySQL [test]> select * from t1;
 MySQL [test]> load data infile '/tmp/t1.csv' into table t1 fields terminated by ',' enclosed by '"' lines terminated by '\n' ;
 MySQL [test]> select * from t1;
