--- a/zh-CN/1.users-guide/5.database-connection-and-routing/4.administrator-guide-connect-to-oceanbase-database/2.administrator-guide-connect-to-oceanbase-database-through-a-mysql-client.md
+++ b/zh-CN/1.users-guide/5.database-connection-and-routing/4.administrator-guide-connect-to-oceanbase-database/2.administrator-guide-connect-to-oceanbase-database-through-a-mysql-client.md
@@ -87,7 +87,7 @@
 通过 MySQL 客户端连接 OceanBase 数据库。
 
 ```sql
-$mysql -h10.10.10.1 -u****@obmysql#obdemo -P2883 -p**1*** -c -A oceanbase
+$mysql -h10.10.10.1 -u****@obmysql#obdemo -P2883 -p****** -c -A oceanbase
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your MySQL connection id is 5751
 Server version: 5.6.25 OceanBase 3.1.3 (r10100032022041510-a09d3134c10665f03fd56d7f8bdd413b2b771977) (Built Apr 15 2022 02:16:22)
