--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/60.set-decryption.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/60.set-decryption.md
@@ -23,11 +23,11 @@ SET DECRYPTION IDENTIFIED BY  ('password'[, 'password' ...]);
 * 为全量备份和增量备份设置相同的密码。
 
   ```sql
-  obclient> SET DECRYPTION IDENTIFIED BY '***1***';
+  obclient> SET DECRYPTION IDENTIFIED BY '*******';
   ```
 
 * 为全量备份和增量备份设置不同的密码，前面是全量备份密码，后面是增量备份密码。
 
   ```sql
-  obclient> SET DECRYPTION IDENTIFIED BY '***1***','***2***';
+  obclient> SET DECRYPTION IDENTIFIED BY '*******','******';
   ```
