--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/61.set-encryption.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/61.set-encryption.md
@@ -23,5 +23,5 @@ SET ENCRYPTION ON IDENTIFIED BY 'password' ONLY;
 设置备份密码 。
 
 ```sql
-obclient> SET ENCRYPTION ON IDENTIFIED BY  '***1***' ONLY;
+obclient> SET ENCRYPTION ON IDENTIFIED BY  '*******' ONLY;
 ```
