--- a/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/4.Experience-the-multi-tenancy-feature.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/4.Experience-the-multi-tenancy-feature.md
@@ -117,7 +117,7 @@ obclient [test]> show tables;
 使用 tenant2 租户进行登录，查看 test 库情况。
 
 ```sql
-obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant2#ob_test -p
+obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant2#ob_test -p******
 
 obclient [(none)]> show databases;
 +--------------------+
