--- a/zh-CN/1.users-guide/9.performance-tuning-guide/2.performance-related-tools/3.log-information/3.slow_query.md
+++ b/zh-CN/1.users-guide/9.performance-tuning-guide/2.performance-related-tools/3.log-information/3.slow_query.md
@@ -11,7 +11,7 @@
 [105909][0][YA92464589051-0005CEB0A443493C-0-0] [lt=8] [dc=0]
 [slow query](TRACE=begin_ts=1634633228637094 2021-10-19 08:47:08.637094|
 [process_begin] u=0 in_queue_time:16, receive_ts:1634633228939375, enqueue_ts:1634633228939377|
-[start_sql] u=1 addr:{ip:"100.88.144.81", port:41995}|
+[start_sql] u=1 addr:{ip:"xxx.xxx.xxx.xxx", port:41995}|
 [query_begin] u=1 trace_id:YA92464589051-0005CEB0A443493C-0-0|
 [before_processor_run] u=5 |
 [session] u=4 sid:3221502589, tenant_id:1|
@@ -57,8 +57,8 @@
 [cg_begin] u=1 |
 [cg_end] u=139 |
 [plan_id] u=167 plan_id:7441|
-[start_trans] u=15 trans_id:{hash:11136244619746343644, inc:85875, addr:{ip:"100.88.144.81", port:43300}, t:1634633228942267}|
-[start_trans] u=0 trans_id:{hash:11136244619746343644, inc:85875, addr:{ip:"100.88.144.81", port:43300}, t:1634633228942267}, timeout:1634633238939375, start_time:1634633228940765|
+[start_trans] u=15 trans_id:{hash:11136244619746343644, inc:85875, addr:{ip:"xxx.xxx.xxx.xxx", port:43300}, t:1634633228942267}|
+[start_trans] u=0 trans_id:{hash:11136244619746343644, inc:85875, addr:{ip:"xxx.xxx.xxx.xxx", port:43300}, t:1634633228942267}, timeout:1634633238939375, start_time:1634633228940765|
 [do_open_plan_begin] u=1 plan_id:7441|
 [sql_start_stmt_begin] u=0 |
 [sql_start_stmt_end] u=4 |
@@ -72,9 +72,9 @@
 [get_row] u=13 |
 [close_plan_begin] u=28 |
 [revert_scan_iter] u=4 |
-[get_trans_result] u=0 ret:0, trans_id:{hash:11136244619746343644, inc:85875, addr:{ip:"100.88.144.81", port:43300}, t:1634633228942267}|
+[get_trans_result] u=0 ret:0, trans_id:{hash:11136244619746343644, inc:85875, addr:{ip:"xxx.xxx.xxx.xxx", port:43300}, t:1634633228942267}|
 [end_participant_begin] u=1 |
-[get_trans_result] u=1 ret:0, trans_id:{hash:11136244619746343644, inc:85875, addr:{ip:"100.88.144.81", port:43300}, t:1634633228942267}|
+[get_trans_result] u=1 ret:0, trans_id:{hash:11136244619746343644, inc:85875, addr:{ip:"xxx.xxx.xxx.xxx", port:43300}, t:1634633228942267}|
 [end_participant] u=0 ret:0|
 [end_participant_end] u=0 |
 [start_end_stmt] u=0 |
@@ -114,8 +114,8 @@
 [check_priv] u=1 |
 [cache_get_plan_end] u=0 |
 [plan_id] u=1 plan_id:3514|
-[start_trans] u=14 trans_id:{hash:7268543862466884666, inc:85881, addr:{ip:"100.88.144.81", port:43300}, t:1634633228944356}|
-[start_trans] u=0 trans_id:{hash:7268543862466884666, inc:85881, addr:{ip:"100.88.144.81", port:43300}, t:1634633228944356}, timeout:1634633238939373, start_time:1634633228945153|
+[start_trans] u=14 trans_id:{hash:7268543862466884666, inc:85881, addr:{ip:"xxx.xxx.xxx.xxx", port:43300}, t:1634633228944356}|
+[start_trans] u=0 trans_id:{hash:7268543862466884666, inc:85881, addr:{ip:"xxx.xxx.xxx.xxx", port:43300}, t:1634633228944356}, timeout:1634633238939373, start_time:1634633228945153|
 [do_open_plan_begin] u=1 plan_id:3514|
 [sql_start_stmt_begin] u=0 |
 [sql_start_stmt_end] u=4 |
@@ -128,9 +128,9 @@
 [storage_table_scan_end] u=24 |
 [close_plan_begin] u=44 |
 [revert_scan_iter] u=2 |
-[get_trans_result] u=1 ret:0, trans_id:{hash:7268543862466884666, inc:85881, addr:{ip:"100.88.144.81", port:43300}, t:1634633228944356}|
+[get_trans_result] u=1 ret:0, trans_id:{hash:7268543862466884666, inc:85881, addr:{ip:"xxx.xxx.xxx.xxx", port:43300}, t:1634633228944356}|
 [end_participant_begin] u=1 |
-[get_trans_result] u=1 ret:0, trans_id:{hash:7268543862466884666, inc:85881, addr:{ip:"100.88.144.81", port:43300}, t:1634633228944356}|
+[get_trans_result] u=1 ret:0, trans_id:{hash:7268543862466884666, inc:85881, addr:{ip:"xxx.xxx.xxx.xxx", port:43300}, t:1634633228944356}|
 [end_participant] u=0 ret:0|
 [end_participant_end] u=0 |
 [start_end_stmt] u=0 |
