--- a/zh-CN/1.users-guide/9.performance-tuning-guide/4.business-model-tuning/1.load-balancing.md
+++ b/zh-CN/1.users-guide/9.performance-tuning-guide/4.business-model-tuning/1.load-balancing.md
@@ -102,7 +102,7 @@ MySQL [oceanbase]> select * from gv$unit where tenant_id=1002 limit 1 \G;
                  zone: z1
             tenant_id: 1002
           tenant_name: tt1
-               svr_ip: 192.168.30.65
+               svr_ip: xxx.xxx.xxx.1
              svr_port: 40000
   migrate_from_svr_ip:
 migrate_from_svr_port: 0
@@ -124,9 +124,9 @@ MySQL [oceanbase]> select svr_ip,count(1) from __all_virtual_meta_table where te
 +---------------+----------+
 | svr_ip        | count(1) |
 +---------------+----------+
-| 192.168.30.65 |        1 |
-| 192.168.30.66 |        1 |
-| 192.168.30.67 |        1 |
+| xxx.xxx.xxx.1 |        1 |
+| xxx.xxx.xxx.2 |        1 |
+| xxx.xxx.xxx.3 |        1 |
 +---------------+----------+
 3 rows in set (0.01 sec)
 
@@ -134,7 +134,7 @@ MySQL [oceanbase]> select svr_ip,count(1) from __all_virtual_meta_table where te
 +---------------+----------+
 | svr_ip        | count(1) |
 +---------------+----------+
-| 192.168.30.65 |        5 |
+| xxx.xxx.xxx.1 |        5 |
 +---------------+----------+
 1 row in set (0.00 sec)
 ```
