--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/8.spatial-functions-of-mysql-mode/4.geometry-attribute-functions-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/8.spatial-functions-of-mysql-mode/4.geometry-attribute-functions-of-mysql-mode.md
@@ -31,7 +31,7 @@ obclient> SELECT ST_Area(ST_GEOMFROMTEXT('LINESTRING(0 0, 0 1)'));
 ERROR 3516 (22S01): POLYGON/MULTIPOLYGON value is a geometry of unexpected type LINESTRING in st_area.
 ```
 
-对于 MultiPolygon 空间对象，函数返回结果是集合内 Polygon 面积之和。
+对于 MultiPolygon 空间对象，`ST_Area()` 函数返回结果是集合内 Polygon 面积之和。
 
 ```sql
 obclient> SELECT ST_Area(ST_GEOMFROMTEXT('MultiPolygon(((0 0,0 3,3 3,3 0,0 0),(1 1,1 2,2 2,2 1,1 1)))'));
