--- a/zh-CN/1.users-guide/9.performance-tuning-guide/8.performance-whitepaper/3.use-sysbench-to-test-the-performance-of-oceanbase-database.md
+++ b/zh-CN/1.users-guide/9.performance-tuning-guide/8.performance-whitepaper/3.use-sysbench-to-test-the-performance-of-oceanbase-database.md
@@ -276,19 +276,19 @@ sudo yum install ob-sysbench
 1. 运行以下命令，初始化数据库：
 
    ```bash
-   /usr/sysbench/bin/sysbench oltp_read_write.lua --mysql-host=x.x.x.x --mysql-port=xxxx --mysql-db=test --mysql-user=$user@$tenant --mysql-password=xxx --table_size=1000000 --tables=30 --threads=150 --report-interval=10 --time=60 cleanup
+   /usr/sysbench/bin/sysbench oltp_read_write.lua --mysql-host=x.x.x.x --mysql-port=xxxx --mysql-db=test --mysql-user=$user@$tenant --mysql-password=****** --table_size=1000000 --tables=30 --threads=150 --report-interval=10 --time=60 cleanup
    ```
 
 2. 运行以下命令，新建表：
 
    ```bash
-   /usr/sysbench/bin/sysbench oltp_read_write.lua --mysql-host=x.x.x.x --mysql-port=xxxx --mysql-db=test --mysql-user=$user@$tenant --mysql-password=test --table_size=1000000 --tables=30 --threads=150 --report-interval=10 --time=60 prepare
+   /usr/sysbench/bin/sysbench oltp_read_write.lua --mysql-host=x.x.x.x --mysql-port=xxxx --mysql-db=test --mysql-user=$user@$tenant --mysql-password=****** --table_size=1000000 --tables=30 --threads=150 --report-interval=10 --time=60 prepare
    ```
 
 3. 运行以下命令，执行测试：
 
    ```bash
-   /usr/sysbench/bin/sysbench oltp_read_write.lua --mysql-host=x.x.x.x --mysql-port=xxxx --mysql-db=test --mysql-user=$user@$tenant --mysql-password=xxx --table_size=1000000 --tables=30 --threads=150 --report-interval=10 --time=60 --db-ps-mode=disable run
+   /usr/sysbench/bin/sysbench oltp_read_write.lua --mysql-host=x.x.x.x --mysql-port=xxxx --mysql-db=test --mysql-user=$user@$tenant --mysql-password=****** --table_size=1000000 --tables=30 --threads=150 --report-interval=10 --time=60 --db-ps-mode=disable run
    ```
 
    参数说明：
