--- a/zh-CN/14.developer-guide/5.design-specifications-and-constraints/6.best-practices-for-database-design/1.configuration-example-of-the-database-connection-pool/4.configuration-example-of-c3p0-connection-pool.md
+++ b/zh-CN/14.developer-guide/5.design-specifications-and-constraints/6.best-practices-for-database-design/1.configuration-example-of-the-database-connection-pool/4.configuration-example-of-c3p0-connection-pool.md
@@ -21,7 +21,7 @@ public class C3P0PoolTest {
         dataSource.setDriverClass("com.alipay.oceanbase.jdbc.Driver");
         dataSource.setJdbcUrl("jdbc:oceanbase://10.100.xxx.xxx:30035/test?useSSL=false");
         dataSource.setUser("test@tt3");
-        dataSource.setPassword("test");
+        dataSource.setPassword("******");
         dataSource.setInitialPoolSize(3);
         dataSource.setMaxPoolSize(10);
         dataSource.setMinPoolSize(3);
