--- a/zh-CN/14.developer-guide/5.design-specifications-and-constraints/6.best-practices-for-database-design/1.configuration-example-of-the-database-connection-pool/8.sample-configuration-of-commonpool.md
+++ b/zh-CN/14.developer-guide/5.design-specifications-and-constraints/6.best-practices-for-database-design/1.configuration-example-of-the-database-connection-pool/8.sample-configuration-of-commonpool.md
@@ -139,7 +139,7 @@ hibernate 配置文件：
         <property name="connection.driver_class">com.alipay.oceanbase.jdbc.Driver</property>
         <property name="connection.url">jdbc:oceanbase://10.100.xxx.xxx:18815/test</property>
         <property name="connection.username">admin@mysql</property>
-        <property name="connection.password">admin</property>
+        <property name="connection.password">******</property>
         <!-- 可选配置 -->
         <!--是否支持方言  -->
     <!--<property name="dialect">org.hibernate.dialect.MySQLDialect</property>-->
