--- a/zh-CN/18.supporting-tools/4.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.use-source-code-to-build-an-oblogproxy.md
+++ b/zh-CN/18.supporting-tools/4.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.use-source-code-to-build-an-oblogproxy.md
@@ -148,7 +148,7 @@ oblogproxy 单一配置文件，用代码目录下的 `conf.json`。
    ```json
    {
      "ob_sys_username": "4B9C75F64934174F4E77EE0E9A58****",
-     "ob_sys_password": "DCE2AF09D006D6A440816880B938****"
+     "ob_sys_password": "****************************************"
    }
    ```
 
