--- a/zh-CN/18.supporting-tools/4.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/2.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/zh-CN/18.supporting-tools/4.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/2.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -40,7 +40,7 @@ oblogproxy 将安装在目录 `/usr/local/oblogproxy` 下。
 ```unknow
 {
   "ob_sys_username": "4B9C75F64934174F4E77EE0E9A58****",
-  "ob_sys_password": "DCE2AF09D006D6A440816880B938****"
+  "ob_sys_password": "****************************************"
 }
 ```
 
