--- a/zh-CN/1.users-guide/5.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/0.deploy-OBProxy.md
+++ b/zh-CN/1.users-guide/5.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/0.deploy-OBProxy.md
@@ -41,7 +41,7 @@ OBProxy 需要跟后端 OBServer 节点保持通信，所以需要提前在 Ocea
 1. 通过 IP 直连登录到集群。
 
    ```bash
-   obclient -h172.xx.xxx.25 -uroot@sys -P2881 -pxxxxx
+   obclient -h172.xx.xxx.25 -uroot@sys -P2881 -p******
    ```
 
 2. 执行以下命令查看 sys 租户下的用户。
@@ -65,7 +65,7 @@ OBProxy 需要跟后端 OBServer 节点保持通信，所以需要提前在 Ocea
    示例如下：
 
    ```sql
-   $ obclient -h172.xx.xxx.25 -uroot@sys -P2881 -pxxxxx
+   $ obclient -h172.xx.xxx.25 -uroot@sys -P2881 -p******
    
    obclient> CREATE USER proxyro IDENTIFIED BY '******';
    Query OK, 0 rows affected
