--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/6.information-functions/5.current_user.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/6.information-functions/5.current_user.md
@@ -34,7 +34,7 @@ obclient> GRANT SELECT ON *.* TO test@192.*.*.* IDENTIFIED BY 'XXXXXX';
 使用 `test` 用户登录到 OceanBase 数据库后，执行 `CURRENT_USER()`。结果如下所示。
 
 ```sql
-[admin@hostname ~]$ obclient -hxxx.xx.xxx.xxx -Pxxxx -utest@****#**** -p
+[admin@hostname ~]$ obclient -hxxx.xx.xxx.xxx -Pxxxx -utest@****#**** -p******
 obclient> SELECT CURRENT_USER();
 +----------------------+
 | user()               |
@@ -51,7 +51,7 @@ obclient> DROP USER 'test'@'192.168.*.*';
 obclient> \q
 Bye
 
-[admin@hostname ~]$ obclient -hxxx.xx.xxx.xxx -Pxxxx -utest@****#**** -p
+[admin@hostname ~]$ obclient -hxxx.xx.xxx.xxx -Pxxxx -utest@****#**** -p******
 obclient> SELECT CURRENT_USER();
 +----------------------+
 | user()               |
