315 Add new views and configuration items

--- a/zh-CN/1.users-guide/12.reference-guide/3.system-configuration-items/253.log_disk_size.md
+++ b/zh-CN/1.users-guide/12.reference-guide/3.system-configuration-items/253.log_disk_size.md
@@ -2,7 +2,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>V3.1.5 版本新增配置项。</p>
+  <p>V3.1.5 版本新增集群级配置项。</p>
 </main>
 
 `log_disk_size` 用于设置 Clog 磁盘的大小。
