--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/2.generate-configuration-file.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/2.generate-configuration-file.md
@@ -180,9 +180,9 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
    ##################  OCP 多可用区配置  ###################### 
    OCP_MAZ_ENABLED=TRUE                                 # 如果开启多可用区，且没有全局vip时，上面配置的 OCP_VIP 和 OBPROXY_VIP 可改成主az的 vip 或者 任意ocp节点的ip
    OCP_MAZ_AZ_NAME_LIST=(az1 az1 az2)                # 对应 ocp1，ocp2，ocp3配置的 az_name
-   OCP_MAZ_OCP_VIP_LIST=(192.168.0.1 192.168.0.2 192.168.0.3)    # 对应 ocp1，ocp2，ocp3配置的 site-url 的ip
+   OCP_MAZ_OCP_VIP_LIST=(xx.xx.xx.1 xx.xx.xx.2 xx.xx.xx.3)    # 对应 ocp1，ocp2，ocp3配置的 site-url 的ip
    OCP_MAZ_OCP_VPORT_LIST=(8080 8080 8080)      # 对应 ocp1，ocp2，ocp3配置的 site-url 的port
-   OCP_MAZ_METAPROXY_VIP_LIST=(192.168.0.1 192.168.0.2 192.168.0.3)  # 对应 ocp1, ocp2, ocp3使用的metadb 连接ip
+   OCP_MAZ_METAPROXY_VIP_LIST=(xx.xx.xx.1 xx.xx.xx.2 xx.xx.xx.3)  # 对应 ocp1, ocp2, ocp3使用的metadb 连接ip
    OCP_MAZ_METAPROXY_VPORT_LIST=(2883 2883 2883)         # 对应 ocp1, ocp2, ocp3使用的metadb 连接port
    ```
 
