--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -27,7 +27,7 @@
 
 * OCP Express
   
-  基于 Web 的 Oceanbase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。详细信息请参考 [OceanBase 云平台 Express (OCP Express)](https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001692855)。
+  基于 Web 的 OceanBase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。详细信息请参考 [OceanBase 云平台 Express (OCP Express)](https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001692855)。
   
 ## 前提条件
 
@@ -53,7 +53,7 @@
 | OBServer 节点  | 10.10.10.3 | OceanBase 数据库 Zone3   |
 | OBAgent        | 10.10.10.1、10.10.10.2、10.10.10.3 | OceanBase 监控工具   |
 | ODP            | 10.10.10.4 | OceanBase 访问反向代理   |
-| OCP Express    | 10.10.10.4 | 基于 Web 的 Oceanbase 数据库 4.x 管理工具      |
+| OCP Express    | 10.10.10.4 | 基于 Web 的 OceanBase 数据库 4.x 管理工具      |
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
