--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -162,7 +162,7 @@ spec:
   
 - `data-log`：OceanBase 日志存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 的 Clog 目录，建议大小至少配置为 `memory` 大小的 3 倍以上。
 
-- `log`：Oceanbase 进程日志存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 进程日志的存放目录，建议大小至少配置为 10Gi 以上。
+- `log`：OceanBase 进程日志存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 进程日志的存放目录，建议大小至少配置为 10Gi 以上。
 
 - `obagent-conf-file`：OBAgent 配置文件目录存储配置，用来存放 OBAgent 配置文件，不需要配置特别大，一般配置大小为 1Gi 就可以。
 
@@ -272,17 +272,17 @@ kubectl get svc obproxy-service -n obcluster
 
 # output
 NAME              TYPE       CLUSTER-IP      EXTERNAL-IP   PORT(S)                         AGE
-obproxy-service   NodePort   1.1.1.1   <none>        2883:30083/TCP,2884:30084/TCP   1m
+obproxy-service   NodePort   xxx.xxx.xxx.xxx   <none>        2883:30083/TCP,2884:30084/TCP   1m
 ```
 
 您可以通过 CLUSTER-IP 和 PORT 的方式进行连接，对应的连接命令如下。
 
 ```shell
 # use clusterip without password
-obclient -h1.1.1.1 -P2883 -uroot oceanbase -A -c
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot oceanbase -A -c
 
 # use clusterip with password
-obclient -h1.1.1.1 -P2883 -uroot -p oceanbase -A -c
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot -p oceanbase -A -c
 
 # using nodeport without password
 obclient -h<node_ip> -P30083 -uroot oceanbase -A -c
