--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -156,22 +156,22 @@ spec:
   
 - `memory`：建议配置为大于 10 Gi 的整数，小于 10 Gi 会引发系统异常。
   
-- `data-file`：该部分为 OBServer 系统配置项 `datafile_size` 的大小，建议为 memory 的 3 倍以上。用户可以自行按需配置 `storageClassName`。
+- `data-file`：该部分为 OceanBase 数据库系统配置项 `datafile_size` 的大小，建议为 `memory` 的 3 倍以上。用户可以自行按需配置 `storageClassName`。
   
-- `data-log`：该部分为 OBServer 系统配置项 `data_dir` 的大小，建议为 memory 的 5 倍以上。用户可以自行按需配置 `storageClassName`。
+- `data-log`：该部分为 OceanBase 数据库系统配置项 `data_dir` 的大小，建议为 `memory` 的 5 倍以上。用户可以自行按需配置 `storageClassName`。
   
-- `log`：该部分为 OBServer 系统日志的大小，建议为 30 Gi 以上。用户可以自行按需配置 `storageClassName`。
+- `log`：该部分为 OceanBase 数据库系统日志的大小，建议为 30 Gi 以上。用户可以自行按需配置 `storageClassName`。
 
-## 部署 OBProxy
+## 部署 ODP
 
-### 使用默认配置部署 OBProxy
+### 使用默认配置部署 ODP
 
 ```bash
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
 ```
 
-### 自定义部署 OBProxy
+### 自定义部署 ODP
 
 您也可以在 obproxy.yaml 中根据自己的配置做一些修改。
 参考以下部分配置文件进行修改：
@@ -232,10 +232,11 @@ spec:
 
 主要环境变量配置说明：
 
-- `APP_NAME`: OBProxy 的 appname。
-- `OB_CLUSTER`: OBProxy 连接的 OceanBase 集群名。
+- `APP_NAME`: ODP 的 appname。
 
-- `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过 OceanBase 集群的 service 地址来生成的，当部署好 OceanBase 集群之后，会自动产生两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT`, 分别表示 OceanBase 集群的服务地址和端口。
+- `OB_CLUSTER`: ODP 连接的 OceanBase 集群名。
+
+- `RS_LIST`: OceanBase 集群的 rs_list，这里是通过 OceanBase 集群的 service 地址来生成的，当部署好 OceanBase 集群之后，会自动产生两个环境变量 `SVC_OB_TEST_SERVICE_HOST` 和 `SVC_OB_TEST_SERVICE_PORT`，分别表示 OceanBase 集群的服务地址和端口。
 
 ## 部署 prometheus
 
@@ -249,9 +250,9 @@ kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/service.yaml
 ```
 
-### 自定义部署 prometheus
+### 自定义部署 Prometheus
 
-prometheus 查询 obagent 的请求地址通过 configmap 来进行配置，根据服务名，端口名来进行过滤, 如果 oceanbase 集群或者 obproxy 集群进行过自定义的配置，需要根据实际情况设置服务名的正则表达式。
+Prometheus 查询 OBAgent 的请求地址通过 configmap 来进行配置，根据服务名，端口名来进行过滤, 如果 OceanBase 集群或者 ODP 集群进行过自定义的配置，需要根据实际情况设置服务名的正则表达式。
 
 ```yaml
 # configmap 中关键配置
@@ -296,8 +297,9 @@ scrape_configs:
 
 - service 和 port 说明:
 
-  - oceanbase: ob-operator 会根据部署的 oceanbase 集群名称来创建一个 service， 命名的规则是 `svc-monitor-${obcluster_name}`, 端口名为 `monagent`, 如果部署 oceanbase 的时候自定义了集群名，需要根据实际的集群名称来修改对应配置
-  - obproxy: 需要配置对应的 obproxy 的 service 和 port name
+  - oceanbase: ob-operator 会根据部署的 OceanBase 集群名称来创建一个 service， 命名的规则是 `svc-monitor-${obcluster_name}`，端口名为 `monagent`, 如果部署 OceanBase 数据库的时候自定义了集群名，需要根据实际的集群名称来修改对应配置。
+
+  - obproxy: 需要配置对应的 obproxy 的 service 和 port name。
 
 - 监控指标的请求路径:
 
