--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md
@@ -286,7 +286,7 @@ OceanBase 数据库支持单机部署。单机部署仅包含一个 Zone 并且 
    +----------------+-------+----------+-------------+
    | SVR_IP         | ZONE  | cpu_free | mem_free_gb |
    +----------------+-------+----------+-------------+
-   | 172.30.135.238 | zone1 |       63 |          26 |
+   | xx.xx.xx.xx    | zone1 |       63 |          26 |
    +----------------+-------+----------+-------------+
    1 row in set
    ```
