--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -279,16 +279,16 @@ obproxy-service   NodePort   xxx.xxx.xxx.xxx   <none>        2883:30083/TCP,2884
 
 ```shell
 # use clusterip without password
-obclient -hxxx.xxx.xxx.xxx -P2883 -uroot oceanbase -A -c
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot -A -c
 
 # use clusterip with password
-obclient -hxxx.xxx.xxx.xxx -P2883 -uroot -p oceanbase -A -c
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot -p****** -A -c
 
 # using nodeport without password
-obclient -h<node_ip> -P30083 -uroot oceanbase -A -c
+obclient -h<node_ip> -P30083 -uroot -A -c
 
 # using nodeport with password
-obclient -h<node_ip> -P30083 -uroot -p oceanbase -A -c
+obclient -h<node_ip> -P30083 -uroot -p****** -A -c
 ```
 
 ## 监控 OceanBase 数据库
