修改目录后的坏链修改

--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
@@ -677,7 +677,7 @@ Outputs & filters:
 sudo yum install obtpch
 ```
 
-完成后，我们通过如下命令，就可以启动一个数据集规模为 1 GB 的 TPCH 测试了，整个过程包括数据集生成、schema 导入、以及自动运行测试。本文中假设您的测试环境部署和 [快速体验 OceanBase](../1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md) 中的步骤一致，如有差别，例如集群名称、密码 安装目录等，请根据具体情况进行调整。
+完成后，我们通过如下命令，就可以启动一个数据集规模为 1 GB 的 TPCH 测试了，整个过程包括数据集生成、schema 导入、以及自动运行测试。本文中假设您的测试环境部署和 [快速体验 OceanBase 数据库](../1.quickly-experience-oceanbase-for-community.md) 中的步骤一致，如有差别，例如集群名称、密码 安装目录等，请根据具体情况进行调整。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
