--- a/zh-CN/7.reference/4.development-reference/6.hbaseapi/3.use-of-the-hbaseapi-client.md
+++ b/zh-CN/7.reference/4.development-reference/6.hbaseapi/3.use-of-the-hbaseapi-client.md
@@ -8,7 +8,7 @@ HBaseAPI 客户端基于 TableAPI 提供的基本接口，在客户端封装了 
 进行客户端操作前，需要了解下列 OceanBase 数据库的基本知识：
 
 + [HBaseAPI 方案介绍](1.introduction-to-hbaseapi-scheme.md)
-+ [体验 OceanBase 数据库企业版](../../../2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md)
++ [快速体验 OceanBase 数据库](../../../2.quickstart/1.quickly-experience-oceanbase-for-community.md)
 + [通过 MySQL 客户端连接 OceanBase 数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md)
 
 ## HBaseAPI 部署
