--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md
@@ -169,7 +169,7 @@ obclient -h127.0.0.1 -P2883 -uroot -Doceanbase
 +----------------+-------------+------------+--------+
 | ip             | server_port | pprof_port | status |
 +----------------+-------------+------------+--------+
-| 172.30.135.208 | 8088        | 8089       | active |
+| xx.xx.xx.xx    | 8088        | 8089       | active |
 +----------------+-------------+------------+--------+
 +-------------------------------------------------------+
 |                       prometheus                      |
