--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -27,7 +27,7 @@
      ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INTERVAL=xxx] [BINDING=xxx]';
      ```
 
-   设置后，可通过 `DBA_OB_ARCHIVELOG_SUMMARY` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
+   设置后，`sys` 租户和用户租户可分别通过 `CDB_OB_ARCHIVE_DEST` 和 `DBA_OB_ARCHIVE_DEST` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
 
    详细配置说明如下：
 
