--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
@@ -41,19 +41,19 @@
 
 物理恢复的可恢复区间如下图所示。
 
-![可恢复区间](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/backup-and-restore/%E5%8F%AF%E6%81%A2%E5%A4%8D%E5%8C%BA%E9%97%B4.png)
+![可恢复区间](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/backup-and-restore/restore-window.jpg)
 
-图中，用户一共发起了 3 次日志归档，且 `piece_id` 分别为 1、2、3，和 5 次数据备份。其中：
+图中，用户的备份情况如下：
 
-* `log_archive_piece:1` 以及 `backup_full_set=1` 和 `backup_inc_set=2` 的数据已经被清理。
+* 发起了 2 次日志归档，其 `round_id` 分别为 1、2。
 
-* 有效数据备份为 `backup_full_set=3`、`backup_full_set=4` 和 `backup_inc_set=5`。
+  由于日志归档可能发生中断，故在计算恢复区间时还需要排除中间不连续的时间段，这样就会呈现出分段的可恢复区间，即图中大括号划出的范围：[scn 300, scn 500] 和 [scn 900, scn 1500]。
 
-* 有效日志归档为 `log_archive_piece:2` 和 `log_archive_piece:3`。
+* 发起了 3 次数据备份，有效数据备份分别为 `full_backup_set_1`、 `full_backup_set_2`、`inc_backup_set_3`。
 
-根据当前保留的有效数据备份以及日志的所有可恢复区间，同时由于日志归档可能发生中断，故需要排除中间不连续的时间段，得到分段的可恢复区间，即图中两段绿色线段的时间范围：
+根据当前保留的有效数据备份以及日志的所有可恢复区间，物理恢复的可恢复区间为：当前保留的有效数据备份与日志的所有可恢复区间的并集，具体对应的区间如下：
 
-\[`backup_full_set=3` 的 `MIN_RESTORE_SCN`,`log_archive_piece:2` 的 `CHECKPOINT_SCN`\] 和 \[`backup_full_set=4` 的 `MIN_RESTORE_SCN`, `log_archive_piece:3` 的 `CHECKPOINT_SCN`\]
+\[`backup_full_set=1` 的 `MIN_RESTORE_SCN`,`log_archive_piece:2` 的 `CHECKPOINT_SCN`\] 和 \[`backup_full_set=2` 的 `MIN_RESTORE_SCN`, `log_archive_piece:3` 的 `CHECKPOINT_SCN`\]
 
 ## 恢复性能相关
 
